--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
   "name": "news-source",
   "version": "1.0.0",
+  "engines": {
+    "node": "^10"
+  },
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js",
+    "heroku-postbuild": "cd client && npm install && npm run build"
   },
   "repository": {
     "type": "git",
